# rohlang2

./: Cargo.toml  README.md  add.roh  ex.roh  test  thing.roh
backend/: Cargo.toml  README.md
backend/src/: main.rs
frontend/: frontend.cabal
frontend/app/: Main.hs
frontend/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
src/: main.rs  thing.rs
