cabal-version:      2.4
name:               frontend
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Ocean-Moist
maintainer:         Ocean_Moist

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md, proto/**/*.proto
build-type:         Custom

custom-setup
    setup-depends:    base, Cabal, proto-lens-setup


executable frontend
    main-is:          Main.hs
    build-tool-depends: proto-lens-protoc:proto-lens-protoc
    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    exposed-modules:   Main
    autogen-modules:   Proto.AST Proto.AST_Fields 
    other-modules:     Proto.AST Proto.AST_Fields
    build-depends:    base ^>=4.16.4.0, proto-lens-runtime
    hs-source-dirs:   app
    default-language: Haskell2010
    default-extensions: GADTs
